--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.5",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0"
   }
 }
